<resources>
    <string name="facebook_app_id">2381817768653089</string>
    <string name="fb_login_protocol_scheme">fb2381817768653089</string>
    <string name="forgot_password">Lupa Kata Sandi ?</string>
    <string name="login">Masuk</string>
    <string name="doesn_have_account">Belum punya akun? </string>
    <string name="need_help">Butuh bantuan? </string>
    <string name="register">Daftar</string>
    <string name="call_center_alteacare">Hubungi Layanan Pelanggan AlteaCare</string>
    <string name="password">Kata Sandi</string>
    <string name="email">Alamat Email</string>
    <string name="email_or_phone_number">Alamat Email / Nomor Ponsel</string>
    <string name="next">Lanjutkan</string>
    <string name="choose_gender">Pilih jenis kelamin</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="sorting">Urutkan</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="fill_last_name">Isi nama belakang</string>
    <string name="last_name">Nama Belakang</string>
    <string name="fill_first_name">Isi nama depan</string>
    <string name="first_name">Nama Depan</string>
    <string name="fill_personal_data">Isi Data Pribadi</string>
    <string name="fill_contact_data">Isi Data Kontak</string>
    <string name="create_password">Buat Sandi</string>
    <string name="recreate_password">Buat Kata Sandi</string>
    <string name="fill_email">Tulis alamat email</string>
    <string name="create_password_desc">Kata sandi digunakan untuk masuk ke aplikasi</string>
    <string name="personal_data_desc">Data pribadi diperlukan sebagai identitas ketika melakukan telekonsultasi dan catatan dokter. Pastikan mengisinya dengan benar.</string>
    <string name="register_page_1">1/3</string>
    <string name="register_page_2">2/3</string>
    <string name="register_page_3">3/3</string>
    <string name="select_date">Atur Tanggal</string>
    <string name="choose">Pilih</string>
    <string name="personal_info_confirmation_desc">Data pribadi ini tidak dapat diubah.\nPastikan data yang diisi sudah benar.\nPerubahan hanya bisa dilakukan melalui \nLayanan Pelanggan AlteaCare. </string>
    <string name="personal_data_review">Rincian Data Pribadi</string>
    <string name="change_personal_info">Ubah Data Pribadi</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="phone_number">Nomor Ponsel</string>
    <string name="_62">+62</string>
    <string name="insert_password">Masukan Sandi</string>
    <string name="reinsert_password">Konfirmasi Kata Sandi</string>
    <string name="lower_case">Huruf kecil</string>
    <string name="number">Angka</string>
    <string name="terapkan">Terapkan</string>
    <string name="upper_case">Huruf besar</string>
    <string name="min_8_character">Minimal 8 karakter</string>
    <string name="accept_term_condition">Dengan ini saya menyetujui Syarat dan Ketentuan yang ditetapkan oleh AlteaCare.</string>
    <string name="accept_and_next">Setuju dan Lanjutkan</string>
    <string name="email_verification_desc">Kode verifikasi telah dikirim via email ke</string>
    <string name="email_verification_desc2">Masukkan Kode verifikasi telah dikirim via email ke</string>
    <string name="phone_number_verification_desc">Kode verifikasi telah dikirim via phone ke</string>
    <string name="change_email_underline"><u>Ubah alamat email</u></string>
    <string name="change_phone_underline"><u>Ubah Nomor Ponsel</u></string>
    <string name="email_verification_send">Email verifikasi telah dikirim</string>
    <string name="phone_verification_send">Nomor Telephon verifikasi telah dikirim</string>
    <string name="email_verification">Verifikasi Email</string>
    <string name="phone_number_verification">Verifikasi Nomor Ponsel</string>
    <string name="phone_verification">Verifikasi</string>
    <string name="doesnt_receive_email">Tidak menerima email ?</string>
    <string name="doesnt_receive_phone">Tidak menerima SMS ?</string>
    <string name="resend">Kirim Ulang</string>
    <string name="change_contact_info">Ubah data kontak</string>
    <string name="verification">Verifikasi</string>
    <string name="note">Catatan</string>
    <string name="forgot_password_note_desc">Kamu hanya bisa mendapatkan link sebanyak 5 kali, setelah itu kamu harus menunggu selama 2 Jam untuk mendapatkan link lagi</string>
    <string name="trial_remaining">Sisa percobaan</string>
    <string name="reset">Atur Ulang</string>
    <string name="reset_password">Atur Ulang Kata Sandi</string>
    <string name="create_new_password">Buat Kata Sandi baru</string>
    <string name="recreate_new_password">Buat Ulang Kata Sandi</string>
    <string name="recreate_password_desc">Kamu tidak menyarankan untuk menggunakan tanggal lahir sebagai kata sandi</string>
    <string name="forgot_password_desc">Masukkan alamat email / nomor ponsel yang terdaftar di AlteaCare dan kami akan mengirimkan kode verifikasi untuk mengatur ulang kata sandi.</string>
    <string name="phone">Telepon</string>
    <string name="call_center_altea">021-5555-55555</string>
    <string name="information_center">Pusat Informasi</string>
    <string name="send_message">Kirim Pesan</string>
    <string name="write_message_here">Tulis isi pesan disini</string>
    <string name="message">Pesan</string>
    <string name="choose_message_category">Pilih Kategori Pesan</string>
    <string name="message_category">Kategori Pesan</string>
    <string name="contact_alteacare">Kontak AlteaCare</string>
    <string name="order_id_s">Order ID: %s</string>
    <string name="s_point">%s Poin</string>
    <string name="s_age">%s Tahun %s Bulan</string>
    <string name="my_consultation_schedule">Jadwal telekonsultasi saya hari ini</string>
    <string name="direct_consultation_with_specialist">Temui dokter spesialis via panggilan video</string>
    <string name="home_hint_search">Tuliskan keluhan atau nama dokter</string>
    <string name="home_title1">Keluhan apa yang Anda rasakan?</string>
    <string name="meet_doctor">Temui Dokter</string>
    <string name="medical_resume_process">Resume medis diproses</string>
    <string name="waiting_payment">Menunggu pembayaran</string>
    <string name="payment_is_over">Masa pembayaran berakhir</string>
    <string name="refund">Refund</string>
    <string name="cancel_by_system">Dibatalkan sistem</string>
    <string name="cancel_by_gp">Dibatalkan GP</string>
    <string name="cancel_by_user">Dibatalkan pengguna</string>
    <string name="finish">Selesai</string>
    <string name="pencarian">Pencarian</string>
    <string name="province">Provinsi</string>
    <string name="hospital">Rumah Sakit</string>
    <string name="price">Harga</string>
    <string name="show_all"><u>Lihat Semua</u></string>
    <string name="select_schedule">Pilih Jadwal</string>
    <string name="show_schedule">Lihat Jadwal</string>
    <string name="customer_service">Layanan Pelanggan</string>
    <string name="notification">Notifikasi</string>
    <string name="select_available_schedule">Pilih jadwal yang tersedia</string>
    <string name="show_schedule_this_week">Menampilkan jadwal 7 hari ke depan</string>
    <string name="term_topup">Biaya Transaksi akan dikenakan Rp.1000 \nuntuk setiap Transaksi"</string>
    <string name="my_consultation">Telekonsultasi Saya</string>
    <string name="today">Hari ini</string>
    <string name="this_week">Minggu ini</string>
    <string name="another_day">Hari lain</string>
    <string name="empty_appointment">Tidak ada telekonsultasi hari ini</string>
    <string name="empty_schedule">Jadwal belum tersedia</string>
    <string name="patient_data">Data Pasien</string>
    <string name="no_conversation">Tidak ada percakapan disini</string>
    <string name="identity_number">No. KTP</string>
    <string name="telephone_number">No. Telepone</string>
    <string name="medical_resume_is_in_progress">Resume Medis sedang dalam proses</string>
    <string name="medical_resume_empty">Belum ada resume medis disini</string>
    <string name="medical_document_empty">Dokumen medis belum tersedia</string>
    <string name="consultation_detail">Detail Telekonsultasi</string>
    <string name="re_create_consultation">Jadwalkan Ulang</string>
    <string name="re_schedyke_consultation">Jadwalkan Ulang</string>
    <string name="upload_file_opsional">Unggah Berkas (opsional)</string>
    <string name="max_10mb">Max 10MB</string>
    <string name="supporting_investigation">pemeriksaan penunjang</string>
    <string name="upload_file">Unggah Berkas</string>
    <string name="delete">Hapus</string>
    <string name="show">Lihat</string>
    <string name="complaint">Keluhan</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="prescribed_medication">Prescribed Medication</string>
    <string name="recomendation_doctor">Rekomendasi dokter</string>
    <string name="another_note">Catatan</string>
    <string name="open_gallery">Buka Galeri</string>
    <string name="camera">Kamera</string>
    <string name="document">Dokumen</string>
    <string name="ongoing">Berjalan</string>
    <string name="history">Riwayat</string>
    <string name="canceled">Dibatalkan</string>
    <string name="permission_allow">Izinkan</string>
    <string name="permission_deny">Tolak</string>
    <string name="permission_call_deny">Mohon izinkan akses kamera, direktori dan audio untuk dapat melanjutkan proses ini</string>
    <string name="nav_profile">Akun</string>
    <string name="nav_consultation">Telekonsultasi Saya</string>
    <string name="nav_specialist">Dokter Spesialis</string>
    <string name="nav_home">Beranda</string>
    <string name="error_empty_birth_date">Tanggal lahir belum terisi</string>
    <string name="error_empty_last_name">Nama belakang harus diisi minimal 2</string>
    <string name="error_empty_first_name">Nama depan belum terisi</string>
    <string name="error_empty_gender">Jenis kelamin belum dipilih</string>
    <string name="error_empty_address">Alamat tidak boleh kosong</string>
    <string name="error_empty_country">Negara tidak boleh kosong</string>
    <string name="error_empty_province">Provinsi tidak boleh kosong</string>
    <string name="error_empty_city">Kota tidak boleh kosong</string>
    <string name="error_empty_district">Kecamatan tidak boleh kosong</string>
    <string name="error_empty_sub_district">Kelurahan tidak boleh kosong</string>
    <string name="error_empty_rt_rw">Format Rt/Rw tidak sesuai</string>
    <string name="stop_video">Stop Video</string>
    <string name="str_stop_mic">Stop Mic</string>
    <string name="str_share_screen">Bagikan Layar</string>
    <string name="str_message">Pesan</string>
    <string name="str_other">Lainya</string>
    <string name="birth_place">Tempat Lahir</string>
    <string name="choose_birht_place">Pilih tempat lahir</string>
    <string name="str_birth_country">Negara kelahiran belum terisi</string>
    <string name="str_place_birth">Tulis kota kelahiran</string>
    <string name="str_error_birth_place">Kota kelahiran belum terisi</string>
    <string name="country">Negara</string>
    <string name="fill_address">Masukan Alamat</string>
    <string name="city">Kota</string>
    <string name="districts">Kecamatan</string>
    <string name="sub_distrcits">Kelurahan</string>
    <string name="rt_rw">RT/RW</string>
    <string name="hint_fill_address_name">Ketik nama Jalan, blok, nomor rumah</string>
    <string name="hint_select_country">Pilih Negara</string>
    <string name="hint_select_province">Pilih Provinsi</string>
    <string name="hint_select_city">Pilih Kota</string>
    <string name="hint_select_districts">Pilih Kecamatan</string>
    <string name="hint_select_sub_districts">Pilih Kelurahan</string>
    <string name="hint_fill_rt_rw">Tulis RT/RW contoh : 001/002</string>
</resources>