<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar_default_center" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingStart="@dimen/_18sdp"
        android:paddingEnd="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registerPersonalBtnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_12sdp">

            <TextView
                style="@style/TextInter400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_page_2"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                style="@style/TextInter700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/fill_personal_data" />

            <TextView
                style="@style/TextInter400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/personal_data_desc" />

            <TextView
                style="@style/TextInter700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/registerPersonalEdtxFirstName"
                style="@style/OulineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:gravity="center_vertical"
                android:hint="@string/fill_first_name"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/registerPersonalTxtErrorFirstName"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/error_empty_first_name"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                style="@style/TextInter700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/registerPersonalEdtxLastName"
                style="@style/OulineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:gravity="center_vertical"
                android:hint="@string/fill_last_name"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/registerPersonalTxtErrorLastName"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/error_empty_last_name"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                style="@style/TextInter700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/birth_date" />

            <TextView
                android:id="@+id/registerPersonalTxtBirthDate"
                style="@style/OulineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:gravity="center_vertical"
                android:hint="@string/dd_mm_yyyy"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp" />

            <TextView
                android:id="@+id/registerPersonalTxtErrorBirthDate"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/error_empty_birth_date"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                style="@style/TextInter700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/birth_place"
                />

            <TextView
                android:id="@+id/registerPersonaltxtBirthCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/OulineEditText"
                android:layout_marginTop="@dimen/_2sdp"
                android:gravity="center_vertical"
                android:hint="@string/choose_birht_place"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                app:drawableEndCompat="@drawable/ic_arrow_down_black"
                />

            <TextView
                android:id="@+id/registerPersonalTxtErrorBirthCountry"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/str_birth_country"
                android:visibility="gone"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/registerPersonalEdtxBirthPlace"
                style="@style/OulineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center_vertical"
                android:hint="@string/str_place_birth"
                android:inputType="textPersonName"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/registerPersonalTxtErrorBirthPlace"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/str_error_birth_place"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                style="@style/TextInter700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/registerPersonalTxtGender"
                style="@style/OulineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:gravity="center_vertical"
                android:hint="@string/choose_gender"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                app:drawableEndCompat="@drawable/ic_arrow_down_black" />

            <TextView
                android:id="@+id/registerPersonalTxtErrorGender"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/error_empty_gender"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerPersonalBtnNext"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:enabled="false"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>
