<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar_default_center" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/addressFormBtnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_12sdp">

            <TextView
                style="@style/TextInter600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_address"
                android:textColor="@color/grayDark1" />

            <EditText
                android:id="@+id/addressFormEtAddress"
                style="@style/OulineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="start|center_vertical"
                android:hint="@string/hint_fill_address_name"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/addressFormTvErrorAddress"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/error_empty_address"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                style="@style/TextInter600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/country"
                android:textColor="@color/grayDark1" />

            <TextView
                android:id="@+id/addressFormTvCountry"
                style="@style/OulineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center_vertical"
                android:hint="@string/hint_select_country"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                app:drawableEndCompat="@drawable/ic_arrow_down_black" />

            <TextView
                android:id="@+id/addressFormTvErrorCountry"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/error_empty_country"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                style="@style/TextInter600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/province"
                android:textColor="@color/grayDark1" />

            <TextView
                android:id="@+id/addressFormTvProvince"
                style="@style/OulineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center_vertical"
                android:hint="@string/hint_select_province"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                app:drawableEndCompat="@drawable/ic_arrow_down_black" />

            <TextView
                android:id="@+id/addressFormTvErrorProvince"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/error_empty_province"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                style="@style/TextInter600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/city"
                android:textColor="@color/grayDark1" />

            <TextView
                android:id="@+id/addressFormTvCity"
                style="@style/OulineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center_vertical"
                android:hint="@string/hint_select_city"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                app:drawableEndCompat="@drawable/ic_arrow_down_black" />

            <TextView
                android:id="@+id/addressFormTvErrorCity"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/error_empty_city"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                style="@style/TextInter600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/districts"
                android:textColor="@color/grayDark1" />


            <TextView
                android:id="@+id/addressFormTvDistrict"
                style="@style/OulineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center_vertical"
                android:hint="@string/hint_select_districts"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                app:drawableEndCompat="@drawable/ic_arrow_down_black" />

            <TextView
                android:id="@+id/addressFormTvErrorDistrict"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/error_empty_district"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                style="@style/TextInter600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/sub_distrcits"
                android:textColor="@color/grayDark1" />


            <TextView
                android:id="@+id/addressFormTvSubDistrict"
                style="@style/OulineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center_vertical"
                android:hint="@string/hint_select_sub_districts"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                app:drawableEndCompat="@drawable/ic_arrow_down_black" />

            <TextView
                android:id="@+id/addressFormTvErrorSubDistrict"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/error_empty_sub_district"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                style="@style/TextInter600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/rt_rw"
                android:textColor="@color/grayDark1" />

            <EditText
                android:id="@+id/addressFormEtRtRw"
                style="@style/OulineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center_vertical"
                android:hint="@string/hint_fill_rt_rw"
                android:inputType="number"
                android:maxLength="7"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/addressFormTvErrorRtRw"
                style="@style/MainErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/error_empty_rt_rw"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/addressFormBtnSave"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="Perbarui" />

</androidx.constraintlayout.widget.ConstraintLayout>